GNOME Bugzilla – Bug 688431
gdl-dock-notebook: Fix gtk theme warning.
Last modified: 2012-11-17 13:05:06 UTC
As the summaryt says.
Created attachment 229103 [details] [review] gdl-dock-notebook: Fix gtk theme warning. Gtk-WARNING **: Theme parsing error: <data>:2:10: Not using units is deprecated. Assuming 'px'.
Thanks, I was hunting for this a while ago but missed it. Committed to master and gnome-3-6.