gdl-dock-notebook: Fix gtk theme warning.

Gtk-WARNING **: Theme parsing error: <data>:2:10: Not using units is deprecated. Assuming 'px'.

https://bugzilla.gnome.org/show_bug.cgi?id=688431